data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1841.wast
;; 2. **Test 2: Incorrect Operand Count for Block**    - **Description**: Construct a block that expects two operands, and use `br_if` to branch to the block but only provide one operand.    - **Constraint Checked**: Validate that the `br_if` enforces the correct number of operands required by the block.    - **Relation to Type Mismatch**: Incorrect operand count leads to stack mismanagement and type mismatches.

(assert_invalid
  (module
    (func $incorrect-operand-count
      (block (result i32 i32)
        (br_if 0 (i32.const 1) (i32.const 1))
      )
    )
  )
  "type mismatch"
)